<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_generic"
    >

    <ScrollView android:id="@+id/reset_pass_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout android:id="@+id/reset_pass_form2" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/password_id"
                android:textColor="@color/color_text_darkgrey"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario_login"
                android:id="@+id/password_login"
                android:autoText="false"
                android:minHeight="25dp"
                android:textSize="30dp"
                android:layout_margin="50dp"
                android:textColor="@color/color_text_darkgrey"
                />

            <EditText android:id="@+id/password_old" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" android:textColor="@color/color_text_darkgrey"/>

            <EditText android:id="@+id/password_new" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password_new"
                android:inputType="textPassword" android:textColor="@color/color_text_darkgrey"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/password_new2" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password_new_2"
                android:inputType="textPassword" android:textColor="@color/color_text_darkgrey"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/btn_cambiarPassword" style="?android:textAppearanceSmall"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_cambiar_password"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
