<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/background_generic"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="visible"
            >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="invisible"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_id"
                    android:id="@+id/txtId"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <TextView
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubId"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_nombre"
                    android:id="@+id/txtNombre"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubNombre"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_descripcion"
                    android:id="@+id/txtDescripcion"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubDescripcion"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_direccion"
                    android:id="@+id/txtDireccion"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubDireccion"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_localidad"
                    android:id="@+id/txtLocalidad"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubLocalidad"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_email"
                    android:id="@+id/txtEmail"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubEmail"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_telefono"
                    android:id="@+id/txtTelefono"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubTelefono"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/club_web"
                    android:id="@+id/txtWeb"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="0"/>
                <EditText
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/clubWeb"
                    android:textColor="@color/color_text_darkgrey"
                    android:layout_column="1" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>